--- a/ui/settings.gradle
+++ b/ui/settings.gradle
@@ -7,4 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.6/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'ui-adaptive-classification'
+rootProject.name = 'javafx-gradle-template'
