прикрутил выборочное обучение на базе COCO

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ model_data/yolo.dat
 model_data/wider_face_train_annotation.txt
 model_data/wider_face_val_annotation.txt
 model_data/wider_face_test_annotation.txt
+model_data/coco_train_annotation.txt
+model_data/coco_val_annotation.txt
+model_data/coco_test_annotation.txt
 downloads/
 tensorboard-logs/
 logs/
