--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ tensorboard-logs/
 logs/
 basic_capsnet_train_test/capsnet_v1_logs/
 diverse_capsnet_train_test/diverse_capsnet_logs/
-res_capsnet_v1_logs/
+res_capsnet_train_test/res_capsnet_v1_logs/
+res_capsnet_train_test/res_capsnet_v2_logs
 log.*
 *.h5
 *.dat
