--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ diverse_capsnet_train_test/diverse_capsnet_logs/
 res_capsnet_train_test/res_capsnet_v1_logs/
 res_capsnet_train_test/res_capsnet_v2_logs
 complex_capsnet_train_test/capsnet_3level
+efficient_capsnet_train_test/capsnet_v1_logs
 log.*
 *.h5
 *.dat
