--- a/.gitignore
+++ b/.gitignore
@@ -14,17 +14,17 @@ model_data/coco_test_annotation.txt
 downloads/
 tensorboard-logs/
 logs/
-basic_capsnet_train_test/capsnet_v1_logs/
-diverse_capsnet_train_test/diverse_capsnet_logs/
-res_capsnet_train_test/res_capsnet_v1_logs/
-res_capsnet_train_test/res_capsnet_v2_logs
-complex_capsnet_train_test/capsnet_3level
-efficient_capsnet_train_test/efficient_capsnet_logs
+basic_capsnet_train_test/capsnet_logs/
+diverse_capsnet_train_test/capsnet_logs/
+res_capsnet_train_test/capsnet_logs/
+res_capsnet_train_test/capsnet_logs/
+complex_capsnet_train_test/capsnet_logs/
+efficient_capsnet_train_test/capsnet_logs/
 log.*
 *.h5
 *.dat
 yolov*
 *.weights
 checkpoint*
-test_data
-data
+other/
+data/
