--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -15,9 +15,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.1.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
-    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'com.h2database:h2'
@@ -27,8 +26,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.0.RELEASE'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1'
 
+    // Security
+    implementation 'org.springframework.security:spring-security-config'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.4.RELEASE'
+
+    // Keycloak
+    implementation 'org.keycloak:keycloak-spring-boot-starter:12.0.4'
+    implementation 'org.keycloak:keycloak-authz-client:12.0.4'
+    implementation 'org.keycloak:keycloak-admin-client:12.0.4'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 bootJar {
