--- a/ui-service/build.gradle
+++ b/ui-service/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'org.springframework.boot' version '2.4.5'
     id "io.freefair.lombok" version "5.0.0-rc4"
 }
 
@@ -14,7 +14,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.1.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.2'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
 //    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
@@ -23,8 +23,8 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'com.google.guava:guava:28.1-jre'
     //template-generator
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.0.RELEASE'
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.4.5'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.5.3'
 
     // Security
     implementation 'org.springframework.security:spring-security-config'
@@ -35,9 +35,9 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.4.RELEASE'
 
     // WebFlux Feign
-    implementation("com.playtika.reactivefeign:feign-reactor-core:2.0.22")
-    implementation("com.playtika.reactivefeign:feign-reactor-spring-configuration:2.0.22")
-    implementation("com.playtika.reactivefeign:feign-reactor-webclient:2.0.22")
+    implementation("com.playtika.reactivefeign:feign-reactor-core:2.0.31")
+    implementation("com.playtika.reactivefeign:feign-reactor-spring-configuration:2.0.31")
+    implementation("com.playtika.reactivefeign:feign-reactor-webclient:2.0.31")
 
     // Apache
     implementation 'org.apache.commons:commons-lang3:3.12.0'
