--- a/stat-service/build.gradle
+++ b/stat-service/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:2.2.1.RELEASE'
@@ -22,25 +22,16 @@ dependencies {
     implementation 'com.h2database:h2'
     implementation 'org.postgresql:postgresql'
     implementation 'com.google.guava:guava:28.1-jre'
-    //template-generator
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.0.RELEASE'
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.4.1'
 
     // Security
-    implementation 'org.springframework.security:spring-security-config'
-    implementation 'org.springframework.security:spring-security-oauth2-jose'
-    implementation 'org.springframework.security:spring-security-oauth2-client'
-    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.4.RELEASE'
-
-    // Keycloak
-    implementation 'org.keycloak:keycloak-spring-boot-starter:12.0.4'
-    implementation 'org.keycloak:keycloak-authz-client:12.0.4'
-    implementation 'org.keycloak:keycloak-admin-client:12.0.4'
+//    implementation 'org.springframework.security:spring-security-config'
+//    implementation 'org.springframework.security:spring-security-oauth2-jose'
+//    implementation 'org.springframework.security:spring-security-oauth2-client'
+//    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 bootJar {
