--- a/ui-service/build.gradle
+++ b/ui-service/build.gradle
@@ -14,8 +14,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.1.RELEASE'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.1.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config:2.2.4.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:2.2.4.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.4.RELEASE'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     implementation 'com.h2database:h2'
