--- a/ui-service/src/main/resources/application.yaml
+++ b/ui-service/src/main/resources/application.yaml
@@ -25,3 +25,4 @@ services:
   auth-url: http://192.168.0.13:8080/auth
   caps-visual-url: http://localhost:8081/
   machine-learning-url: http://127.0.0.1:5000/
+  stat-url: http://localhost:8082/
