--- a/stat-service/build.gradle
+++ b/stat-service/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'com.google.guava:guava:28.1-jre'
+
+    // Rabbit
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
     // Security
 //    implementation 'org.springframework.security:spring-security-config'
 //    implementation 'org.springframework.security:spring-security-oauth2-jose'
