--- a/stat-service/src/main/resources/application.yaml
+++ b/stat-service/src/main/resources/application.yaml
@@ -6,16 +6,19 @@ spring:
     allow-bean-definition-overriding: true
   application:
     name: "Stat Service API"
-#  rabbitmq:
-#    listener:
-#      simple:
-#        auto-startup: true
-#        retry:
-#          enabled: true
-#          initial-interval: 1000
-#          max-attempts: 3
-#          multiplier: 5
-#          max-interval: 60000
+  rabbitmq:
+    host: 192.168.0.13
+    username: guest
+    password: guest
+    listener:
+      simple:
+        auto-startup: true
+        retry:
+          enabled: true
+          initial-interval: 1000
+          max-attempts: 3
+          multiplier: 5
+          max-interval: 60000
 
 mongo:
   hosts: 192.168.0.13
