--- a/algorithms/.gitignore
+++ b/algorithms/.gitignore
@@ -4,16 +4,16 @@ build
 __pycache__
 dist
 bmstu_ovchinnikov_capsnet.egg-info
-model_data/yolo.dat
-model_data/wider_face_train_annotation.txt
-model_data/wider_face_val_annotation.txt
-model_data/wider_face_test_annotation.txt
-model_data/coco_train_annotation.txt
-model_data/coco_val_annotation.txt
-model_data/coco_test_annotation.txt
+resources/data/yolo.dat
+resources/data/wider_face_train_annotation.txt
+resources/data/wider_face_val_annotation.txt
+resources/data/wider_face_test_annotation.txt
+resources/data/coco_train_annotation.txt
+resources/data/coco_val_annotation.txt
+resources/data/coco_test_annotation.txt
 downloads/
 tensorboard-logs/
-logs/
+resources/data/logs/
 basic_capsnet_train_test/capsnet_logs/
 diverse_capsnet_train_test/capsnet_logs/
 res_capsnet_train_test/capsnet_logs/
@@ -26,8 +26,7 @@ log.*
 yolov*
 *.weights
 checkpoint*
-other/
-data/
+resources/other/
 wider_face/
-mnist_detection/
+resources/data/mnist_detection/
 coco/
