--- a/algorithms/.gitignore
+++ b/algorithms/.gitignore
@@ -30,4 +30,5 @@ resources/other/
 resources/data/wider_face/
 resources/data/mnist_detection/
 resources/data/mars/
+resources/data/market1501/
 coco/
