добавлена модель капсульной нейронной сети для классификации ucf24 видео событий

--- a/algorithms/.gitignore
+++ b/algorithms/.gitignore
@@ -26,6 +26,8 @@ log.*
 yolov*
 *.weights
 checkpoint*
+*.model
+ucf24-caps*
 resources/other/
 resources/data/wider_face/
 resources/data/mnist_detection/
