--- a/algorithms/Dockerfile
+++ b/algorithms/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6.13-stretch
+FROM tensorflow/tensorflow:2.4.1-gpu-jupyter
 
 RUN mkdir /app
 
@@ -7,6 +7,6 @@ WORKDIR /app
 COPY . .
 
 RUN python -m pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip install -r requirements-docker.txt
 
 CMD ["python", "app.py"]
