--- a/ui-service/Dockerfile
+++ b/ui-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM gradle:6-jdk11-alpine AS build
+FROM gradle:6-jdk11 AS build
 
 COPY --chown=gradle:gradle . /home/gradle/src
 
@@ -6,7 +6,7 @@ WORKDIR /home/gradle/src
 
 RUN gradle build --no-daemon
 
-FROM openjdk:8-jre-slim
+FROM openjdk:11-jre-slim
 
 EXPOSE 8080
 
@@ -14,4 +14,4 @@ RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
