add fucntion freeze_to

--- a/algorithms/Dockerfile
+++ b/algorithms/Dockerfile
@@ -1,12 +1,19 @@
-FROM tensorflow/tensorflow:2.4.1-gpu-jupyter
-
-RUN mkdir /app
+FROM nvidia/cuda:10.2-cudnn8-devel
+FROM continuumio/anaconda3
 
 WORKDIR /app
 
-COPY . .
+# Create the environment:
 
-RUN python -m pip install --upgrade pip
+# Make RUN commands use the new environment:
+RUN conda create --name myenv python=3.6
+SHELL ["conda", "run", "-n", "myenv", "/bin/bash", "-c"]
+
+COPY requirements-docker.txt .
+RUN pip install --upgrade pip
 RUN pip install -r requirements-docker.txt
 
-CMD ["python", "app.py"]
+# The code to run when container is started:
+COPY . .
+EXPOSE 5000
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "myenv", "python", "app_detection.py"]
